k8s/base/services/sensor-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sensor-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sensor-service
  ports:
    - name: http
      port: 8083
      targetPort: http
    - name: grpc
      port: 9093
      targetPort: grpc
