k8s/base/services/sensor-service/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sensor-service-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: sensor-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/part-of: aquashield
      ports:
        - protocol: TCP
          port: 8083
        - protocol: TCP
          port: 9093
    - from:
        - ipBlock:
            cidr: 35.191.0.0/16
        - ipBlock:
            cidr: 130.211.0.0/22
      ports:
        - protocol: TCP
          port: 8083
